tests/golden/type_errors/named_struct_missing_field.cd
struct Person { name: string, age: number }
let p: Person = Person { name: "Ada" };
