tests/golden/type_errors/named_struct_missing_field.err
Type error at 2:17: missing field `age` for struct `Person`
  let p: Person = Person { name: "Ada" };
                  ^
